fix: Datepicker positioning and Checkbox icon visibility
- Improve Datepicker smooth positioning
- Fix Checkbox check icon always visible issue

--- a/pkg/styles/goilerplate.css
+++ b/pkg/styles/goilerplate.css
@@ -658,6 +658,10 @@ body {
   bottom: 0px;
 }
 
+.bottom-auto {
+  bottom: auto;
+}
+
 .bottom-full {
   bottom: 100%;
 }
@@ -727,8 +731,8 @@ body {
   margin-right: 0.5rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-2 {
